@@ -1,11 +1,10 @@
 /* 
    GENERATED FILE, DO NOT EDIT
-   Generated from dcraw/dcraw.c at Sun Mar 15 13:33:55 2009
+   Generated from dcraw/dcraw.c at Sun Mar 22 20:07:52 2009
    Look into original file (probably http://cybercom.net/~dcoffin/dcraw/dcraw.c)
    for copyright information.
 */
 
-#line 260 "dcraw/dcraw.c"
 #define CLASS LibRaw::
 #include "libraw/libraw_types.h"
 #define LIBRAW_LIBRARY_BUILD
@@ -14,7 +13,6 @@
 #include "internal/defines.h"
 #include "internal/var_defines.h"
 
-#line 270 "dcraw/dcraw.c"
 
 #ifndef __GLIBC__
 char *my_memmem (char *haystack, size_t haystacklen,
@@ -29,7 +27,6 @@ char *my_memmem (char *haystack, size_t haystacklen,
 #define memmem my_memmem
 #endif
 
-#line 304 "dcraw/dcraw.c"
 
 ushort CLASS sget2 (uchar *s)
 {
@@ -104,7 +101,6 @@ void CLASS read_shorts (ushort *pixel, int count)
   if ((order == 0x4949) == (ntohs(0x1234) == 0x1234))
       swab ((char*)pixel, (char*)pixel, count*2);
 }
-#line 381 "dcraw/dcraw.c"
 void CLASS canon_black (double dark[2])
 {
   int c, diff, row, col;
@@ -639,7 +635,6 @@ void CLASS canon_compressed_load_raw()
   canon_black (dark);
 }
 
-#line 927 "dcraw/dcraw.c"
 int CLASS ljpeg_start (struct jhead *jh, int info_only)
 {
   int c, tag, len;
@@ -1264,7 +1259,6 @@ void CLASS fuji_load_raw()
   free (pixel);
 #endif
 }
-#line 1556 "dcraw/dcraw.c"
 void CLASS ppm_thumb (FILE *tfp)
 {
   char *thumb;
@@ -1762,7 +1756,6 @@ void CLASS leaf_hdr_load_raw()
   }
 }
 
-#line 2057 "dcraw/dcraw.c"
 void CLASS sinar_4shot_load_raw()
 {
   ushort *pixel;
@@ -2990,7 +2983,6 @@ void CLASS smal_v9_load_raw()
     smal_decode_segment (seg+i, holes);
   if (holes) fill_holes (holes);
 }
-#line 4158 "dcraw/dcraw.c"
 
 void CLASS pseudoinverse (double (*in)[3], double (*out)[3], int size)
 {
@@ -3254,7 +3246,7 @@ void CLASS wavelet_denoise()
   temp = fimg + size*3;
   if ((nc = colors) == 3 && filters) nc++;
 #ifdef LIBRAW_LIBRARY_BUILD
-#pragma omp parallel default(shared) private(i,col,row,thold,lev,lpass,hpass,temp) firstprivate(c,scale,size) */
+#pragma omp parallel default(shared) private(i,col,row,thold,lev,lpass,hpass,temp) firstprivate(c,scale,size) 
 #endif
   {
       temp = (float*)malloc( (iheight + iwidth) * sizeof *fimg);
@@ -4258,7 +4250,6 @@ void CLASS parse_thumb_note (int base, unsigned toff, unsigned tlen)
   }
 }
 
-#line 5429 "dcraw/dcraw.c"
 void CLASS parse_makernote (int base, int uptag)
 {
   static const uchar xlat[2][256] = {
@@ -4790,7 +4781,6 @@ void CLASS parse_kodak_ifd (int base)
   }
 }
 
-#line 5964 "dcraw/dcraw.c"
 int CLASS parse_tiff_ifd (int base)
 {
   unsigned entries, tag, type, len, plen=16, save;
@@ -5952,7 +5942,6 @@ void CLASS parse_cine()
   data_offset  = (INT64) get4() + 8;
   data_offset += (INT64) get4() << 32;
 }
-#line 7229 "dcraw/dcraw.c"
 #ifdef LIBRAW_LIBRARY_BUILD
 void CLASS adobe_coeff (const char *p_make, const char *p_model)
 #else
@@ -7855,7 +7844,6 @@ notraw:
   RUN_CALLBACK(LIBRAW_PROGRESS_IDENTIFY,1,2);
 #endif
 }
-#line 9223 "dcraw/dcraw.c"
 void CLASS convert_to_rgb()
 {
   int row, col, c, i, j, k;
@@ -8111,7 +8099,6 @@ void CLASS gamma_lut (ushort lut[0x10000])
 }
 
 
-#line 9503 "dcraw/dcraw.c"
 void CLASS tiff_set (ushort *ntag,
 	ushort tag, ushort type, int count, int val)
 {
